--- a/style.css
+++ b/style.css
@@ -1,99 +1,36 @@
 
-body {
-    font-family: Arial, sans-serif;
-    background: linear-gradient(to bottom right, #2e0854, #dcdcdc); /* Darker purple */
-    color: #fff;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    text-align: center;
+body::before{
+    display: block;
+    content: '';
+    height: 60px;
+}
+body{
+    font-family: 'sans-serif';
+    font-size: 16px;
 }
 
-nav {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 20px;
+section{
+    padding-top: 80px;
+    min-height: 100vh;
+    /* min-width: 100vh; */
+    background-color: #160d27ff
 }
 
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap: 20px;
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(211, 211, 211, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' fill='none' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
 
-nav li {
-    display: inline;
+th{
+    white-space: nowrap
 }
 
-nav a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1.2em;
-    font-weight: bold; /* Slightly bold */
+.no-wrap{
+    white-space: nowrap   
 }
 
-nav a:hover {
-    text-decoration: underline;
-}
 
-.main-content h1 {
-    font-size: 3em;
-    margin: 0;
-}
-
-.main-content h2 {
-    font-size: 2em;
-    margin: 10px 0 0 0;
-}
-
-.content-section {
-    width: 80%;
-    max-width: 800px;
-    margin: 20px auto;
-    text-align: left;
-}
-
-.content-section h1 {
-    font-size: 2.5em;
-    margin-bottom: 10px;
-}
-
-.content-section p, .content-section ul {
-    font-size: 1.1em;
-    line-height: 1.6;
-}
-
-.content-section ul {
-    padding-left: 20px;
-}
-
-.carousel-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-}
-.carousel {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 20px;
-}
-.carousel-item {
-    margin: 5px 0;
-    padding: 10px;
-    background-color: white;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    width: 200px;
-    text-align: center;
-    color: #000;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.fill img {
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%
 }
